[gd_scene load_steps=19 format=2]

[ext_resource path="res://décor/Crystal_spawn.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal7.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal8.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal10.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal12.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal3.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal1.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal9.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal11.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal13.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal4.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal2.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal6.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Décors/Décor_new/CRYSTAL/crystal5.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 11 ) ],
"loop": true,
"name": "money",
"speed": 18.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "soul",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "ball",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[sub_resource type="CircleShape2D" id=3]
radius = 306.159

[node name="Crystal_spawn" type="RigidBody2D" groups=[
"Crystal_spawn",
]]
collision_layer = 2147483704
collision_mask = 2147483704
custom_integrator = true
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "ball"
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_Crystal_spawn_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
